Issue#10: Updating User Service for Login and Registration

--- a/library_system/build.gradle
+++ b/library_system/build.gradle
@@ -26,12 +26,22 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// Password Encoder (included with Spring Security)
+	// No extra dependency needed
+
+	// ModelMapper
+	implementation 'org.modelmapper:modelmapper:3.1.1'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.33' // ✅ Make sure version is specified
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
