--- a/library_system/build.gradle
+++ b/library_system/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
 	// ModelMapper
 	implementation 'org.modelmapper:modelmapper:3.1.1'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// JWT - JJWT (JSON Web Token)
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
